really fix verticle cell align

--- a/themes/risotto/static/css/typography.css
+++ b/themes/risotto/static/css/typography.css
@@ -198,7 +198,7 @@ table {
 }
 th, td {
     /* padding: 0 .75rem; */
-    vertical-align: middle;
+    vertical-align: top;
 }
 th:first-child, td:first-child {
     padding-left: 0;
